tdf#132814: fix put autovalue to Yes in gui for Mysql/MariaDB

See part of bt:
https://bugs.documentfoundation.org/show_bug.cgi?id=132814#c3

Like this since at least:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=b2cefc2e36925b4384eb0aea54aa2c6bcfb018a8
author	Tamas Bunth <tamas.bunth@collabora.co.uk>	2018-10-08 11:04:48 +0200
committer	Tamás Bunth <btomi96@gmail.com>	2018-10-14 22:16:05 +0200
commit	b2cefc2e36925b4384eb0aea54aa2c6bcfb018a8 (patch)
tree	f1ab6e9fec3c66f0a3285b3ffffcbae38dc7185d
parent	ba6723431afa843232fadf44e12ddab44e85c9f0 (diff)
Revert removal of mysql jdbc connector
And also make some minor fixes so it cooperates with the new mysqlc
library.

Change-Id: Id328c8378be1555fb5934c738def7fcd62f7a14b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93915
Tested-by: Jenkins
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>